--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ endorsed.classpath=
 excludes=
 file.reference.asm.jar=lib/asm.jar
 file.reference.gson-2.3.1.jar=lib/gson-2.3.1.jar
+file.reference.proguard.jar=lib/proguard.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.asm.jar}
+    ${file.reference.asm.jar}:\
+    ${file.reference.proguard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
